# GerasimovichD_LabW

./: .gitignore  .gitmodules  LW_1.cpp  README.md
DCPA/labw_1/: Labw_1.pro  MainLogic.cpp  MainLogic.h  main.cpp
DCPA/labw_2/LabW2/: LabW2.pro  MainL.cpp  MainL.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  render.cpp  render.h  word.cpp  word.h
DCPA/labw_3/: mainwindow.cpp
For future/LabW_5/: main.cpp
For future/LabW_6/: main.cpp
For future/LabW_6/headers/: BasicFileInputOutput.h  basicaction.h  frac.h
For future/LabW_6/lib/: basicactions.cpp  frac.cpp
For future/LabW_7/data/: marks2.txt
For future/LabW_7/include/: classes.h  fileManagement.h
For future/LabW_7/lib/: app.cpp
For future/Tests/: test.cpp
For future/Tests/include/: Expression.h
For future/something for future/LabW_7/: main.cpp
LabW_1/: LW_1.cpp
LabW_2/: LabW_2.cpp
LabW_3/: LabW_3.cpp
LabW_4/: main.cpp
LabW_5/: main.cpp
LabW_6/: main.cpp
LabW_6/headers/: app.h  basicactions.h  basicclasses.h
LabW_6/lib/: basicactions.cpp  basicclasses.cpp
LabW_7/include/: basicactions.h  classes.h  fileManagement.h
LabW_7/lib/: basicactions.cpp  classes.cpp  fileManagement.cpp  operationsWithF&SSt.cpp
LabW_7/save/: marks1.txt  marks2.txt
LabW_8/Lab_8_main/: Main.cpp  Main.h
LabW_8/Lab_8_main/include/: Expression.h  Operator.h  Stack.h
LabW_8/Lab_8_main/lib/: basicactions.cpp
LabW_8/Tests/include/: Expression.h  Operator.h  Stack.h  basicactions.h
LabW_8/Tests/lib/: basicactions.cpp  check.cpp
Lab_8(with fixed stack)/: Lab_w_8.cpp
Lab_8(with fixed stack)/include/: Expression.h  Stack.h
MOP/: INPUT.txt  LabW_1_MOP.sln  LabW_1_MOP.vcxproj  Main.cpp  Parser.cpp  Repo.cpp  Repo.h
MOP/LabW_1/: LabW_1_MOP.cpp
MOP/LabW_2/T1/: LabW_2 MOP.cpp  func.asm
MOP/LabW_2/T2/: LabW_2MOP.cpp  func.asm
MOP/LabW_3/: LabW_3 MOP.cpp  func.asm
MOP/LabW_4/: LabW_4.cpp  calculatePi.asm
MOP/drafts/: Command.cpp  Command.h  LabW_1_MOP.vcxproj.filters  Lab_W_1_DCPA.cpp  Main.h  Parser.h
MOP/drafts/mistakes/: INPUT.txt  Main.cpp  Repo.h
MOP/mistakes/: Command.cpp  Command.h  IOfile.cpp  IOfile.h  Parser.cpp  Repo.cpp
Main_project_of_second_session/: boxesoperations.cpp  boxesoperations.h  commonplatform.cpp  commonplatform.h  extremelyweakplatform.cpp  hbox.h  killzone.cpp  logic.h  mainmenu.ui  weakplatform.h
OS/: README.md
OS/LabW_2/: CMakeLists.txt
OS/LabW_2/include/: Matrix.h
OS/LabW_2/src/: Matrix.cpp
OS/LabW_2/test/: main.cpp
OS/LabW_2/tests/: Matrix_test.cpp
OS/LabW_2/windowsOnly/: CMakeLists.txt
OS/LabW_2/windowsOnly/include/: Matrix.h  Number.h
OS/LabW_2/windowsOnly/src/: Matrix.cpp
OS/LabW_2/windowsOnly/test/: main.cpp
OS/LabW_2/windowsOnly/tests/: Matrix_test.cpp
OS/LabW_3 --- Channel/: CMakeLists.txt  events_build_log.txt  spdlog_build_log.txt
OS/LabW_3 --- Channel/eventsystem/: CMakeLists.txt
OS/LabW_3 --- Channel/eventsystem/include/: BasicObject.h  Event.h  EventListener.h
OS/LabW_3 --- Channel/eventsystem/src/: BasicObject.cpp  Event.cpp  EventListener.cpp
OS/LabW_3 --- Channel/include/: BufferedChannel.h  Matrix.h  Thread.h  ThreadEvent.h  ThreadTunnel.h  ThreadTunnelUnit.h
OS/LabW_3 --- Channel/src/: Matrix.cpp  ThreadTunnel.cpp  ThreadTunnelUnit.cpp
OS/LabW_3 --- Channel/test/: main.cpp
OS/LabW_3 --- Channel/tests/: Matrix_test.cpp  Tunnel_test.cpp
OS/LabW_4 -- LINUX/: CMakeLists.txt
OS/LabW_4 -- LINUX/src/: Killer.cpp  User.cpp
OS/LabW_4 -- processes/src/: Killer.cpp  User.cpp
OS/LabW_5 -- LINUX/: CMakeLists.txt
OS/LabW_5 -- LINUX/src/: ProcP.cpp  main.cpp
OS/Labw_1/: CMakeLists.txt
OS/Labw_1 -- LINUX/: CMakeLists.txt
OS/Labw_1--LINUX/: CMakeLists.txt
OS/Labw_1--LINUX/include/: Number.h  Vector.h
OS/Labw_1--LINUX/src/: Number.cpp
OS/Labw_1--LINUX/test/: main.cpp
OS/Labw_1--LINUX/tests/: test_number.cpp  test_vectors.cpp
OS/Labw_1/include/: Number.h  Vector.h
OS/Labw_1/src/: Num.lib  Number.cpp  Vector.exp  Vector.lib
OS/Labw_1/test/: main.cpp
OS/Labw_1/tests/: test_number.cpp  test_vectors.cpp
OS/Labw_5 -- pipe/: CMakeLists.txt
OS/Labw_5 -- pipe/src/: ProcA.cpp  ProcM.cpp  ProcS.cpp  main.cpp
OS_lections/Les121225/: Changing State(k).txt
OS_lections/Les121225/FileMapping/: Задачи.docx
OS_lections/Les171025/slhParentChildV01/: CMakeLists.txt  slhParentChildV01.sln
OS_lections/Les211125/Les211125/Synchronisation/WSpHandshake/09-Handshake/: CMakeLists.txt  Handshake.cpp  Handshake.rc
OS_lections/Les211125/Les211125/Synchronisation/WSpHandshake/09-Queue/: CMakeLists.txt  Queue.cpp
OS_lections/Les211125/Les211125/Synchronisation/WSpHandshake/09-Queue/Debug/: 09 Queue.exe.recipe  09 Queue.vcxproj.FileListAbsolute.txt  BuildLog.htm  RCa22176
OS_lections/Les211125/Les211125/Synchronisation/WSpHandshake/PhilSemaphoreSolution/: CMakeLists.txt  PhilSemaphoreSolution.cpp  Philosophers.rc  Resource.h
OS_lections/Les211125/Les211125/Synchronisation/WSpHandshake/PhilSemaphoreSolution/Debug/: BuildLog.htm  PhilSemaphoreSolution.exe.recipe  PhilSemaphoreSolution.vcxproj.FileListAbsolute.txt
OS_lections/Redirection14_11_25/: Command Redirection, Pipes - Windows CMD - SS64.com (1).html  RedirectionInWindows (3).txt
OS_lections/lec_24-10-25/Les241025/slhParentChildV04/: CMakeLists.txt  slhParentChildV04.sln
OS_lections/lec_24-10-25/Les241025/slhParentChildV04/Child/: Child.cpp  Child.vcxproj
OS_lections/lec_24-10-25/Les241025/slhParentChildV04/Child/Debug/: Child4.exe.recipe
OS_lections/lec_24-10-25/Les241025/slhParentChildV04/Parent/: Parent.cpp  Parent.vcxproj  ResultFromChild.txt
OS_lections/lec_24-10-25/Les241025/slhParentChildV04/Parent/Debug/: Parent4.exe.recipe
OS_lections/lecttask1/: CMakeLists.txt  main.cpp
past/LabW_1/: README.md
past/LabW_4/: main.cpp
past/LabW_6/: main.cpp
past/LabW_7/: main.cpp
past/Lab_8(with fixed stack)/: Lab_w_8.cpp  Main.cpp  Main.h
past/Main_project_of_second_session/: Main_project_of_second_session.pro  appliedvector.cpp  appliedvector.h  extremelyweakplatform.h  hbox.cpp  killzone.h  logic.cpp  platform.h  weakplatform.cpp
(+137 files in other folders)
